--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slot-pulsa-hoki",
+  "name": "slot-pulsa-resmi",
   "main": "./gundol/atom/250722/slot-pulsa-tanpa-potongan",
   "version": "1.18.0",
   "description": "SLOT88 : Situs Judi Slot Deposit Pulsa Gacor Tanpa Potongan | Situs Slot Depo Via Pulsa Resmi Dan Terbaru | Slot Deposit Pulsa Gacor Hari Ini Gampang Menang Maxwin",
