--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slot-dana-resmi",
+  "name": "slot-dana-hoki",
   "main": "./gundol/atom/250722/slot-dana-resmi",
   "version": "1.19.0",
   "description": "Link Situs Slot Deposit 5000 10rb Pakai Dana Tanpa Potongan",
