Renaming slot-linkaja-hoki to slot-linkaja-resmi

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slot-linkaja-hoki",
+  "name": "slot-linkaja-resmi",
   "main": "./gundol/atom/250722/slot-linkaja-resmi",
   "version": "1.20.0",
   "description": "Situs Slot Online Terpercaya Deposit Via Linkaja",
