Renaming slot-gopay-hoki to slot-gopay-resmi

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slot-gopay-hoki",
+  "name": "slot-gopay-resmi",
   "main": "./gundol/atom/250722/slot-gopay-resmi",
   "version": "1.20.1",
   "description": "Link Daftar Slot Deposit Pakai GOPAY 5000 Resmi Indonesia",
