Renaming slot-ovo-hoki to slot-ovo-resmi

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slot-ovo-hoki",
+  "name": "slot-ovo-resmi",
   "main": "./gundol/atom/250722/slot-ovo-resmi",
   "version": "1.21.0",
   "description": "Judi Slot Deposit Via OVO 24 Jam Terpercaya",
