--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parlay-bola-via-pulsa",
+  "name": "parlay-bola-deposit-pulsa",
   "main": "./gundol/atom/250722/parlay-bola-deposit-pulsa",
   "version": "1.22.0",
   "description": "SBOBET PULSA: Situs Judi Bola Parlay Deposit Pulsa Tanpa Potongan Gacor",
