--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "parlay-bola-deposit-pulsa",
-  "main": "./gundol/atom/250722/parlay-bola-deposit-pulsa",
+  "name": "parlay-bola-via-dana",
+  "main": "./gundol/atom/250722/parlay-bola-deposit-dana",
   "version": "1.22.1",
-  "description": "SBOBET PULSA: Situs Judi Bola Parlay Deposit Pulsa Tanpa Potongan Gacor",
+  "description": "SBOBET dana: Situs Judi Bola Parlay Deposit dana Tanpa Potongan Gacor",
   "keywords": [
-    "parlay bola Deposit ovo 5000",
-    "parlay bola Deposit Via ovo 5000",
-    "Situs parlay bola Deposit ovo",
-    "parlay bola Deposit ovo",
-    "parlay bola Via ovo 5ribu",
-    "parlay bola Deposit ovo Tanpa Potongan"
+    "parlay bola Deposit dana 5000",
+    "parlay bola Deposit Via dana 5000",
+    "Situs parlay bola Deposit dana",
+    "parlay bola Deposit dana",
+    "parlay bola Via dana 5ribu",
+    "parlay bola Deposit dana Tanpa Potongan"
   ],
   "activationCommands": {
-    "atom-workspace": "parlay-bola-deposit-pulsa-resmi:toggle"
+    "atom-workspace": "parlay-bola-deposit-dana-resmi:toggle"
   },
-  "repository": "https://github.com/gundolgundol/parlay-bola-deposit-pulsa.git",
+  "repository": "https://github.com/gundolgundol/parlqay-bola-deposit-dana.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
