Renaming parlay-bola-via-dana to parlay-bola-deposit-dana

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parlay-bola-via-dana",
+  "name": "parlay-bola-deposit-dana",
   "main": "./gundol/atom/250722/parlay-bola-deposit-dana",
   "version": "1.23.0",
   "description": "SBOBET dana: Situs Judi Bola Parlay Deposit dana Tanpa Potongan Gacor",
