--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "slot-deposit-sakuku-mudah-menang",
-  "main": "./gundol/atom/280722/slot-sakuku-mudah-menang",
+  "name": "slot-deposit-qris-gampang-menang",
+  "main": "./gundol/atom/280722/slot-qris-mudah-menang",
   "version": "1.31.1",
-  "description": "Daftar Slot Via Sakuku Situs Agen Slot Indonesia 24Jam",
+  "description": "Situs Judi Slot Deposit QRIS Tanpa Biaya Potongan 2022",
   "keywords": [
-    "Slot Deposit sakuku 5000",
-    "Slot Deposit Via sakuku 5000",
-    "Situs Slot Deposit sakuku",
-    "Slot Deposit sakuku",
-    "Slot Via sakuku 5ribu",
-    "Slot Deposit sakuku Tanpa Potongan",
-    "Slot Deposit sakuku Mudah Menang"
+    "Slot Deposit qris 5000",
+    "Slot Deposit Via qris 5000",
+    "Situs Slot Deposit qris",
+    "Slot Deposit qris",
+    "Slot Via qris 5ribu",
+    "Slot Deposit qris Tanpa Potongan",
+    "Slot Deposit qris Mudah Menang"
   ],
   "activationCommands": {
-    "atom-workspace": "slot-online-deposit-sakuku-mudah-menang:toggle"
+    "atom-workspace": "slot-online-deposit-qris-mudah-menang:toggle"
   },
-  "repository": "https://github.com/gundolgundol/slot-sakuku-mudah-menang.git",
+  "repository": "https://github.com/gundolgundol/slot-qris-mudah-menang.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
