--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "parlay-deposit-linkaja-mudah-menang",
-  "main": "./gundol/atom/280722/parlay-linkaja-mudah-menang",
+  "name": "parlay-deposit-gopay-gampang-menang",
+  "main": "./gundol/atom/280722/parlay-gopay-mudah-menang",
   "version": "1.37.1",
-  "description": "Situs Judi Bola Parlay Online Deposit Linkaja Terpercaya Gacor",
+  "description": "Situs Judi Parlay Bola Jitu Deposit Via Gopay 5000 Bebas Potongan",
   "keywords": [
-    "parlay Deposit linkaja 5000",
-    "parlay Deposit Via linkaja 5000",
-    "Situs parlay Deposit linkaja",
-    "parlay Deposit linkaja",
-    "parlay Via linkaja 5ribu",
-    "parlay Deposit linkaja Tanpa Potongan",
-    "parlay Deposit linkaja Mudah Menang"
+    "parlay Deposit gopay 5000",
+    "parlay Deposit Via gopay 5000",
+    "Situs parlay Deposit gopay",
+    "parlay Deposit gopay",
+    "parlay Via gopay 5ribu",
+    "parlay Deposit gopay Tanpa Potongan",
+    "parlay Deposit gopay Mudah Menang"
   ],
   "activationCommands": {
-    "atom-workspace": "parlay-online-deposit-linkaja-mudah-menang:toggle"
+    "atom-workspace": "parlay-online-deposit-gopay-mudah-menang:toggle"
   },
-  "repository": "https://github.com/gundolgundol/parlay-linkaja-mudah-menang.git",
+  "repository": "https://github.com/gundolgundol/parlay-gopay-mudah-menang.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
