--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "parlay-deposit-bca-mudah-menang",
-  "main": "./gundol/atom/280722/parlay-bca-mudah-menang",
+  "name": "agen-slot-pulsa-maxwin",
+  "main": "./gundol/atom/020822/agen-slot-pulsa-gacor",
   "version": "1.40.1",
-  "description": "Daftar Situs Judi Bola Parlay Bank BCA 24 Jam Online Terpercaya 2022",
+  "description": "Agen Slot Online Paling Gacor Deposit Via Pulsa Hari Ini",
   "keywords": [
-    "parlay Deposit bca 5000",
-    "parlay Deposit Via bca 5000",
-    "Situs parlay Deposit bca",
-    "parlay Deposit bca",
-    "parlay Via bca 5ribu",
-    "parlay Deposit bca Tanpa Potongan",
-    "parlay Deposit bca Mudah Menang"
+    "Slot Deposit Pulsa 5000",
+    "Slot Deposit Via Pulsa 5000",
+    "Situs Slot Deposit Pulsa",
+    "Slot Deposit Pulsa",
+    "Slot Via Pulsa 5ribu",
+    "Slot Deposit Pulsa Tanpa Potongan",
+    "Slot Deposit Pulsa Mudah Menang"
   ],
   "activationCommands": {
-    "atom-workspace": "parlay-online-deposit-bca-mudah-menang:toggle"
+    "atom-workspace": "agen-slot-online-via-pulsa-gacor:toggle"
   },
-  "repository": "https://github.com/gundolgundol/parlay-bca-mudah-menang.git",
+  "repository": "https://github.com/gundolgundol/agen-slot-pulsa-gacor.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
