--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agen-slot-pulsa-maxwin",
+  "name": "agen-slot-pulsa-gacor",
   "main": "./gundol/atom/020822/agen-slot-pulsa-gacor",
   "version": "1.41.0",
   "description": "Agen Slot Online Paling Gacor Deposit Via Pulsa Hari Ini",
