--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "judi-bola-via-kripto-5k",
+  "name": "judi-bola-via-kripto-hoki",
   "main": "./gundol/atom/92122/judi-bola-via-kripto",
   "version": "1.61.0",
   "description": "Situs Bandar Judi Poker Online Deposit kripto Terbaik Indonesia",
