--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slot-hoki-via-linkaja-5k",
+  "name": "slot-hoki-via-pulsa",
   "main": "./gundol/atom/92422/slot-hoki-via-linkaja",
   "version": "1.67.0",
   "description": "Agen Judi Slot Online Gacor Deposit linkaja Paling Hoki 2022",
