--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slot-depo-linkaja-5rb-tanpa-potongan",
+  "name": "slot-depo-linkaja-5rb",
   "main": "./gundol/atom/92422/slot-depo-linkaja-5rb",
   "version": "1.68.0",
   "description": "Link Alternatif Slot Online Depo Linkaja 5rb 5000 Tanpa Potongan",
